Add ability to log slow requests. Add a class to hold information about a request. Add a NoArg flag annotation. Add redis support. Add a redis repository for storing/retrieving the request stats. Add a rest controller to return request stats. Make the footer request and show the stats for the previous request. Update systemInfo.jsp to display stats on recent requests.