@@ -23,6 +23,11 @@ plugins {
 
 noArg {
     invokeInitializers = true
+    annotation("net.ehicks.NoArg")
+}
+
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
 }
 
 // for spring boot devtools
@@ -64,6 +69,8 @@ dependencies {
 //    implementation 'org.hibernate:hibernate-jcache'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'redis.clients:jedis'
     implementation 'org.springframework.data:spring-data-envers'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.hibernate:hibernate-envers:5.4.11.Final'
@@ -98,6 +105,10 @@ configurations.all {
     resolutionStrategy {
         cacheChangingModulesFor 0, 'seconds'
     }
+}
+
+configurations {
+    compile.exclude module: "lettuce"
 }
 
 // Task to create a version file based on git repo data
